5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4189/executions/1644_2442.log
== SUBMITION (2019-04-09 16:02:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

num = int(input("Digite um numero: "))

if (num % 2 == 0)
	mensagem = "Par"
else (num % 3 == 0)
	mensagem = "Impar"

print(mensagem)

-- EXECUTION TIME:
0.159796
-- ERROR:
  File "/home/codebench/codes/1644/2442/main.py", line 7
    if (num % 2 == 0)
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:03:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

num = int(input("Digite um numero: "))

if (num % 2 == 0)
	mensagem = "Par"
else (num % 2 == 1)
	mensagem = "Impar"

print(mensagem)

-- EXECUTION TIME:
0.132778
-- ERROR:
  File "/home/codebench/codes/1644/2442/main.py", line 7
    if (num % 2 == 0)
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:03:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

num = int(input("Digite um numero: "))

if (num % 2 == 0)
	mensagem = "Par"
else (num % 2 == 1)
	mensagem = "Impar"

print(mensagem)

-- ERROR:
File "XXXX", line 7
    if (num % 2 == 0)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:03:50) 
-- CODE:
num = input("Digite um numero: "))

if (num % 2 == 0)
	mensagem = "Par"
else (num % 2 == 1)
	mensagem = "Impar"

print(mensagem)

-- ERROR:
File "XXXX", line 1
    num = input())
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:04:01) 
-- CODE:
num = input("Digite um numero: ")

if (num % 2 == 0)
	mensagem = "Par"
else (num % 2 == 1)
	mensagem = "Impar"

print(mensagem)

-- ERROR:
File "XXXX", line 3
    if (num % 2 == 0)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:05:55) 
-- CODE:
num = input("Digite um numero: ")

if (num % num == 0)
	mensagem = "Par"
else (num % num == 1)
	mensagem = "Impar"

print(mensagem)

-- ERROR:
File "XXXX", line 3
    if (num % num == 0)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:07:04) 
-- CODE:
num = input("Digite um numero: ")

if(num % 2 == 0)
	mensagem = "Par"
else(num % num == 1)
	mensagem = "Impar"

print(mensagem)

-- ERROR:
File "XXXX", line 3
    if(num % 2 == 0)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:07:19) 
-- CODE:
num = input("Digite um numero: ")

if(num % 2 == 0):
	mensagem = "Par"
else(num % num == 1):
	mensagem = "Impar"

print(mensagem)

-- ERROR:
File "XXXX", line 5
    else(num % num == 1):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:07:30) 
-- CODE:
num = input("Digite um numero: ")

if(num % 2 == 0):
	mensagem = "Par"
else(num % 2  == 1):
	mensagem = "Impar"

print(mensagem)

-- ERROR:
File "XXXX", line 5
    else(num % 2  == 1):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:08:53) 
-- CODE:
num = input("Digite um numero: ")

if(num % 2 == 0):
	mensagem = "Par"
else(num % 2  == 1):
	mensagem = "Impar"

print(mensagem)

-- ERROR:
File "XXXX", line 5
    else(num % 2  == 1):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:08:53) 
-- CODE:
num = input("Digite um numero: ")

if(num % 2 == 0):
	mensagem = "Par"
else(num % 2  == 1):
	mensagem = "Impar"

print(mensagem)

-- ERROR:
File "XXXX", line 5
    else(num % 2  == 1):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:08:53) 
-- CODE:
num = input("Digite um numero: ")

if(num % 2 == 0):
	mensagem = "Par"
else(num % 2  == 1):
	mensagem = "Impar"

print(mensagem)

-- ERROR:
File "XXXX", line 5
    else(num % 2  == 1):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:08:53) 
-- CODE:
num = input("Digite um numero: ")

if(num % 2 == 0):
	mensagem = "Par"
else(num % 2  == 1):
	mensagem = "Impar"

print(mensagem)

-- ERROR:
File "XXXX", line 5
    else(num % 2  == 1):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:08:53) 
-- CODE:
num = input("Digite um numero: ")

if(num % 2 == 0):
	mensagem = "Par"
else(num % 2  == 1):
	mensagem = "Impar"

print(mensagem)

-- ERROR:
File "XXXX", line 5
    else(num % 2  == 1):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:10:15) 
-- CODE:
num = int(input("Digite um numero: "))

if(num % 2 == 0):
	mensagem = "Par"
else(num % 2  == 1):
	mensagem = "Impar"

print(mensagem)

-- ERROR:
File "XXXX", line 5
    else(num % 2  == 1):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:10:24) 
-- CODE:
num = int(input("Digite um numero: "))

if(num % 2 == 0):
	mensagem = "Par"
else(num):
	mensagem = "Impar"

print(mensagem)

-- ERROR:
File "XXXX", line 5
    else(num):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:10:30) 
-- CODE:
num = int(input("Digite um numero: "))

if(num % 2 == 0):
	mensagem = "Par"
else( num ):
	mensagem = "Impar"

print(mensagem)

-- ERROR:
File "XXXX", line 5
    else( num ):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:12:33) 
-- CODE:
num = int(input("Digite um numero: "))

if(num % 2 == 0):
	MENSAGEM = "Par"
else( num ):
	mensagem = "Impar"

print(mensagem)

-- ERROR:
File "XXXX", line 5
    else( num ):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:14:38) 
-- CODE:
num = int(input("Digite um numero: "))

if(num % 2 == 0):
	MENSAGEM = "Par"
else(num):
	mensagem = "Impar"

print(mensagem)

-- ERROR:
File "XXXX", line 5
    else(num):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:15:04) 
-- CODE:
num = int(input("Digite um numero: "))

if(num % 2 == 0):
	mensagem = "Par"
else(num):
	mensagem = "Impar"

print(mensagem)

-- ERROR:
File "XXXX", line 5
    else(num):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:15:14) 
-- CODE:
num = float(input("Digite um numero: "))

if(num % 2 == 0):
	mensagem = "Par"
else(num):
	mensagem = "Impar"

print(mensagem)

-- ERROR:
File "XXXX", line 5
    else(num):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:15:16) 
-- CODE:
num = float(input("Digite um numero: "))

if(num % 2 == 0):
	mensagem = "Par"
else(num):
	mensagem = "Impar"

print(mensagem)

-- ERROR:
File "XXXX", line 5
    else(num):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:15:16) 
-- CODE:
num = float(input("Digite um numero: "))

if(num % 2 == 0):
	mensagem = "Par"
else(num):
	mensagem = "Impar"

print(mensagem)

-- ERROR:
File "XXXX", line 5
    else(num):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:15:16) 
-- CODE:
num = float(input("Digite um numero: "))

if(num % 2 == 0):
	mensagem = "Par"
else(num):
	mensagem = "Impar"

print(mensagem)

-- ERROR:
File "XXXX", line 5
    else(num):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:15:17) 
-- CODE:
num = float(input("Digite um numero: "))

if(num % 2 == 0):
	mensagem = "Par"
else(num):
	mensagem = "Impar"

print(mensagem)

-- ERROR:
File "XXXX", line 5
    else(num):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:15:17) 
-- CODE:
num = float(input("Digite um numero: "))

if(num % 2 == 0):
	mensagem = "Par"
else(num):
	mensagem = "Impar"

print(mensagem)

-- ERROR:
File "XXXX", line 5
    else(num):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:15:17) 
-- CODE:
num = float(input("Digite um numero: "))

if(num % 2 == 0):
	mensagem = "Par"
else(num):
	mensagem = "Impar"

print(mensagem)

-- ERROR:
File "XXXX", line 5
    else(num):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:15:18) 
-- CODE:
num = float(input("Digite um numero: "))

if(num % 2 == 0):
	mensagem = "Par"
else(num):
	mensagem = "Impar"

print(mensagem)

-- ERROR:
File "XXXX", line 5
    else(num):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:15:18) 
-- CODE:
num = float(input("Digite um numero: "))

if(num % 2 == 0):
	mensagem = "Par"
else(num):
	mensagem = "Impar"

print(mensagem)

-- ERROR:
File "XXXX", line 5
    else(num):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:15:18) 
-- CODE:
num = float(input("Digite um numero: "))

if(num % 2 == 0):
	mensagem = "Par"
else(num):
	mensagem = "Impar"

print(mensagem)

-- ERROR:
File "XXXX", line 5
    else(num):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:15:18) 
-- CODE:
num = float(input("Digite um numero: "))

if(num % 2 == 0):
	mensagem = "Par"
else(num):
	mensagem = "Impar"

print(mensagem)

-- ERROR:
File "XXXX", line 5
    else(num):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:15:18) 
-- CODE:
num = float(input("Digite um numero: "))

if(num % 2 == 0):
	mensagem = "Par"
else(num):
	mensagem = "Impar"

print(mensagem)

-- ERROR:
File "XXXX", line 5
    else(num):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:15:18) 
-- CODE:
num = float(input("Digite um numero: "))

if(num % 2 == 0):
	mensagem = "Par"
else(num):
	mensagem = "Impar"

print(mensagem)

-- ERROR:
File "XXXX", line 5
    else(num):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:15:18) 
-- CODE:
num = float(input("Digite um numero: "))

if(num % 2 == 0):
	mensagem = "Par"
else(num):
	mensagem = "Impar"

print(mensagem)

-- ERROR:
File "XXXX", line 5
    else(num):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:15:29) 
-- CODE:
num = float(input("Digite um numero: "))

if(num % 2 == 0):
	mensagem = "Par"
else:
	mensagem = "Impar"

print(mensagem)

-- OUTPUT:
Impar
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:15:31) 
-- CODE:
num = float(input("Digite um numero: "))

if(num % 2 == 0):
	mensagem = "Par"
else:
	mensagem = "Impar"

print(mensagem)

-- EXECUTION TIME:
0.15456
-- TEST CASE 1:
---- input:
55
---- correct output:
impar
---- user output:
Impar
-- TEST CASE 3:
---- input:
842
---- correct output:
par
---- user output:
Par
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:16:00) 
-- CODE:
num = int(input("Digite um numero: "))

if(num % 2 == 0):
	mensagem = "Par"
else:
	mensagem = "Impar"

print(mensagem)

-- OUTPUT:
Impar
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:16:02) 
-- CODE:
num = int(input("Digite um numero: "))

if(num % 2 == 0):
	mensagem = "Par"
else:
	mensagem = "Impar"

print(mensagem)

-- EXECUTION TIME:
0.202561
-- TEST CASE 1:
---- input:
55
---- correct output:
impar
---- user output:
Impar
-- TEST CASE 3:
---- input:
842
---- correct output:
par
---- user output:
Par
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:16:06) 
-- CODE:
num = int(input("Digite um numero: "))

if(num % 2 == 0):
	mensagem = "Par"
else:
	mensagem = "Impar"

print(mensagem)

-- OUTPUT:
Impar
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:16:19) 
-- CODE:
num = int(input("Digite um numero: "))

if(num % 2 == 0):
	mensagem = "Par"
else:
	mensagem = "Impar"

print(mensagem)

-- EXECUTION TIME:
0.158764
-- TEST CASE 1:
---- input:
55
---- correct output:
impar
---- user output:
Impar
-- TEST CASE 3:
---- input:
842
---- correct output:
par
---- user output:
Par
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:16:48) 
-- CODE:
num = int(input("Digite um numero: "))

if(num % 2 == 0):
	mensagem = "Par"
else:
	mensagem = "Impar"

print(mensagem)

-- OUTPUT:
Impar
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:18:03) 
-- CODE:


# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

num = float(input("Digite um numero: "))

if (num % 2 == 0):
	mensagem = "Par"
else:
	mensagem = "Impar"

print(mensagem)



-- OUTPUT:
Impar
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:18:11) 
-- CODE:


# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

num = float(input("Digite um numero: "))

if (num % 2 == 0):
	mensagem = "Par"
else:
	mensagem = "Impar"

print(mensagem)



-- EXECUTION TIME:
0.136598
-- TEST CASE 1:
---- input:
55
---- correct output:
impar
---- user output:
Impar
-- TEST CASE 3:
---- input:
842
---- correct output:
par
---- user output:
Par
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:18:21) 
-- CODE:


# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

num = int(input("Digite um numero: "))

if (num % 2 == 0):
	mensagem = "Par"
else:
	mensagem = "Impar"

print(mensagem)



-- EXECUTION TIME:
0.207942
-- TEST CASE 1:
---- input:
55
---- correct output:
impar
---- user output:
Impar
-- TEST CASE 3:
---- input:
842
---- correct output:
par
---- user output:
Par
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:18:22) 
-- CODE:


# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

num = int(input("Digite um numero: "))

if (num % 2 == 0):
	mensagem = "Par"
else:
	mensagem = "Impar"

print(mensagem)



-- EXECUTION TIME:
0.118238
-- TEST CASE 1:
---- input:
55
---- correct output:
impar
---- user output:
Impar
-- TEST CASE 3:
---- input:
842
---- correct output:
par
---- user output:
Par
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:18:52) 
-- CODE:


# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

num = int(input("Digite um numero: "))

if (num % 2 == 0):
	mensagem = "par"
else:
	mensagem = "impar"

print(mensagem)



-- OUTPUT:
impar
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:19:00) 
-- CODE:


# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

num = int(input("Digite um numero: "))

if (num % 2 == 0):
	mensagem = "par"
else:
	mensagem = "impar"

print(mensagem)



-- EXECUTION TIME:
0.205908
-- TEST CASE 1:
---- input:
55
---- correct output:
impar
---- user output:
impar
-- TEST CASE 3:
---- input:
842
---- correct output:
par
---- user output:
par
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
